refactor redirection code to use option string

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -319,6 +319,7 @@
     border: none;
     box-shadow: none;
     font-weight: 800;
+    cursor: pointer;
     &:hover {
       outline: none;
     }
