--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -348,6 +348,17 @@
     margin: 15 0 20;
   }
 
+  h4 {
+    font-weight: bold;
+    font-size: 18px;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
+    border-bottom: solid 1px #e9e9e9;
+    &:not(:first-child) {
+      margin-top: 15px;
+    }
+  }
+
   ul {
     list-style-type: disc;
     margin-left: 20px;
