add flaggedStudentCompleted page

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -16,6 +16,7 @@
 @import 'classroom_lessons/_projector_modal.scss';
 @import 'classroom_lessons/_preview_modal.scss';
 @import 'classroom_lessons/_assigned_section.scss';
+@import 'classroom_lessons/_flagged_student_completed.scss';
 
 .teach-lesson-container {
   display: flex;
