--- a/app/assets/stylesheets/pages/diagnostic_mini.scss
+++ b/app/assets/stylesheets/pages/diagnostic_mini.scss
@@ -14,13 +14,7 @@
     }
     a {
       width: 265px;
-      height: 40px;
-      border-radius: 6px;
       margin: 10px auto;
-      font-weight: bold;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
   }
   &.awaiting-students {
@@ -29,6 +23,14 @@
       color: #027360;
       text-decoration: underline;
     }
+    img {
+      margin: 20px auto;
+    }
+  }
+  &.assign-diagnostic {
+    img {
+      margin: 15px auto;
+    }
   }
   &.assign-diagnostic, &.awaiting-students {
     p {
@@ -36,7 +38,20 @@
     }
     img {
       height: 70px;
-      margin: 20px auto;
+    }
+    a {
+      margin: 15px auto;
+      width: 252px;
+    }
+  }
+  &.assign-recommendations, &.assign-diagnostic {
+    a {
+      height: 40px;
+      border-radius: 6px;
+      font-weight: bold;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
