fix minor lessons tool page css errors

--- a/app/views/pages/diagnostic_tool.erb
+++ b/app/views/pages/diagnostic_tool.erb
@@ -7,7 +7,7 @@
 </section>
 <div class="tool-container diagnostic-tool-page">
 
-    <section class='tool-hero text-center bg-lessons-purple'>
+    <section class='tool-hero text-center bg-darkred'>
         <h1 class="q-h1">
             <img class="tool-page-icon" src='/images/quill_diagnostic_white.svg'>Quill Diagnostic
         </h1>
