--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -116,7 +116,7 @@
         </div>
     </section>
 
-    <section class="tool-carousel" id="walkthrough">
+    <section class="tool-carousel lessons-tool-carousel" id="walkthrough">
         <div id="lessonsCarousel" class="carousel slide" data-ride="carousel">
 
             <a class="left carousel-control" href="#lessonsCarousel" role="button" data-slide="prev">
