add inline styling for one screenshot that needs 100% width

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -134,7 +134,7 @@
                 </div>
                 <div class="item">
                   <div class="wrapper">
-                    <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_screenshot_2.png" %> alt="Chania">
+                    <img style="width:100%;" src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_screenshot_2.png" %> alt="Chania">
                   </div>
                   <p>Interactive slides allow students to answer open-ended questions, combine sentences, and write paragraphs that can be shared with the whole class.</p>
                 </div>
