update copy on lessons tool page

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -13,7 +13,7 @@
             <img class="tool-page-icon" src=<%= "#{ENV['CDN_URL']}/images/shared/icon_lessons_white.svg" %>>Quill Lessons
         </h1>
         <p class='description'>
-          Lead whole-class direct instruction with interactive lesson plans. Quill Lessons provides teachers with lesson plans that include whole-class Quill activities and prompts for teacher modeling. Teachers can lead class-wide discussions by displaying students’ answers in real-time.
+          Quill Lessons enables teachers to lead whole-class and small group writing instruction. Teachers control interactive slides that contain writing prompts, and the entire class responds to each prompt. Each Quill Lessons activity provides a lesson plan, writing prompts, discussion topics, and a follow up independent practice activity.
         </p>
         <!-- TODO get a real link here -->
         <a href='https://quillconnect.firebaseapp.com/#/play/lessons/fNAwNLJDkc2T8O5lBeJQwg' target="_blank" class="q-button cta-button bg-white text-lessonspurple">Try Quill Lessons Now</a>
@@ -30,7 +30,7 @@
                 <div class="blurb">
                     <h2>Class-Wide Interactive Activities</h2>
                     <p>
-                      Quill Lessons provides a series of interactive slides that allows the entire class to work on the activities with their teacher. Your students will answer the questions on their devices and you will be able to project the answers back to the class and lead a class discussion.
+                      Quill Lessons provides a series of interactive slides that allows the entire class to work together with their teacher. The slides contain interactive writing prompts, and your students will write their answers on their devices. Teachers then project selected answers back to the class to facilitate a class discussion.
                     </p>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="blurb">
                     <h2>Lead The Lesson</h2>
                     <p>
-                      Each slide contains a step-by-step guide to help you introduce grammar concepts. The step-by-step guide also includes suggestions on how to discuss students’ answers and how to model strong writing skills to the students.
+                      Each slide contains a step-by-step guide to help you introduce new writing skills and content topics. The step-by-step guide also includes suggestions on how to discuss students’ answers and how to model strong writing to the students.
                     </p>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <div class="blurb">
                     <h2>Identify Students For Small Group</h2>
                     <p>
-                      When the students respond, you can click on the “flag” button to select students who may need extra support. At the end of the lesson, you can pull aside the flagged students for small group instruction.
+                      When the students respond, you can click on the “flag” button to select students who may need extra support. Students don’t see that they are flagged, but at the end of the lesson, you can pull aside flagged students for small group instruction.
                     </p>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="blurb">
                   <h2>Class-Wide Interactive Activities</h2>
                   <p>
-                    Quill Lessons provides a series of interactive slides that allows the entire class to work on the activities with their teacher. Your students will answer the questions on their devices and you will be able to project the answers back to the class and lead a class discussion.
+                    Quill Lessons provides a series of interactive slides that allows the entire class to work together with their teacher. The slides contain interactive writing prompts, and your students will write their answers on their devices. Teachers then project selected answers back to the class to facilitate a class discussion.
                   </p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div class="blurb">
                   <h2>Lead The Lesson</h2>
                   <p>
-                    Each slide contains a step-by-step guide to help you introduce grammar concepts. The step-by-step guide also includes suggestions on how to discuss students’ answers and how to model strong writing skills to the students.
+                    Each slide contains a step-by-step guide to help you introduce new writing skills and content topics. The step-by-step guide also includes suggestions on how to discuss students’ answers and how to model strong writing to the students.
                   </p>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="blurb">
                   <h2>Identify Students For Small Group</h2>
                   <p>
-                    When the students respond, you can click on the “flag” button to select students who may need extra support. At the end of the lesson, you can pull aside the flagged students for small group instruction.
+                    When the students respond, you can click on the “flag” button to select students who may need extra support. Students don’t see that they are flagged, but at the end of the lesson, you can pull aside flagged students for small group instruction.
                   </p>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                   <div class="wrapper">
                     <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_screenshot_1.png" %> alt="Chania">
                   </div>
-                  <p>Teachers can use the step by step guide to introduce a grammar concept and model strong sentence construction skills.</p>
+                  <p>Teachers can use the step-by-step guide to introduce a writing skill and model strong sentence construction skills.</p>
                 </div>
                 <div class="item">
                   <div class="wrapper">
