add routes and interface for ordering and creating activityCategoires

--- a/app/views/profiles/staff.html.slim
+++ b/app/views/profiles/staff.html.slim
@@ -25,6 +25,8 @@
       tr: td= link_to "Topic Categories Manager", cms_topic_categories_path
       tr: td= link_to 'Topics Manager (Standard)', cms_topics_path
       tr: td= link_to "Concepts Manager (Create level 2 & 1 here)", cms_concepts_path
+      tr: td= link_to "Activity Category Manager", cms_activity_categories_path
+
 
     article.simple-rounded-box: table.table
       thead: th Data Dashboards
