--- a/app/views/cms/activity_categories/index.html.erb
+++ b/app/views/cms/activity_categories/index.html.erb
@@ -1,15 +1,14 @@
-<%= react_component('ActivityCategoriesApp', props: {activity_categories: @activity_categories}) %>
+<div class="container activity-categories-container">
+  <h1>Activity Categories</h1>
 
-<% @activity_categories.each do |activity_category| %>
-  <%= "##{activity_category.order_number}: #{activity_category.name}" %>
-<% end %>
-
-<%= form_for ActivityCategory.new, url: cms_activity_categories_path do |f| %>
+  <%= form_for ActivityCategory.new, url: cms_activity_categories_path do |f| %>
   <%= f.label      :name, 'Name' %>
   <%= f.text_field :name %>
-
   <%= f.label      :order_number, 'Order Number' %>
   <%= f.text_field :order_number %>
-
   <%= f.button 'Add Activity Category' %>
-<% end %>
+  <% end %>
+
+  <%= react_component('ActivityCategoriesApp', props: {activity_categories: @activity_categories}) %>
+
+</div>
