--- a/app/assets/stylesheets/pages/activity_categories.scss
+++ b/app/assets/stylesheets/pages/activity_categories.scss
@@ -24,5 +24,13 @@
         margin-bottom: 5px;
       }
     }
+    .activity-category {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .delete {
+        font-size: 14px;
+      }
+    }
   }
 }
