Update meduim integration.

--- a/app/views/pages/news.html.erb
+++ b/app/views/pages/news.html.erb
@@ -6,13 +6,18 @@
   <div class="container white-page">
     <div class="row">
       <div class="col-md-5 medium-articles">
-        <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/two-years-in-quill-org-reaches-100-000-students-milestone-78e81b3c715c">Two Years In, Quill.org Reaches 100,000 Students Milestone</a>
+        <a class="m-story" data-collapsed="true" href="https://medium.com/writing-with-quill/quill-org-launches-ell-diagnostic-ac2dd65de692">Quill.org Launches ELL Diagnostic</a>
+        <a class="m-story" data-collapsed="true" href="https://medium.com/writing-with-quill/quill-org-launches-new-diagnostic-sentence-combining-tools-ef3b650b27df">Quill.org Launches New Diagnostic & Sentence Combining Tools</a>
+        <a class="m-story" data-collapsed="true" href="https://medium.com/writing-with-quill/democracy-prep-students-help-design-quill-af86c2c1e906">Democracy Prep Students Help Design Quill</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/open-source-developers-build-quill-at-women-coders-dinner-b02d65c5b251">Open Source Developers Build Quill at Women Coders Dinner</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/quill-awarded-grant-to-develop-a-platform-for-web-based-writing-activities-91829a4c416b">Quill Awarded Grant to Develop a Platform for Web-Based Writing Activities</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/quill-at-masscue-28f01222a733">Quill at MassCUE</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/writing-with-quill/empirical-awarded-grant-to-develop-innovative-language-tool-f37f3f8672f8">Empirical Awarded Grant to Develop Innovative Language Tool</a>
       </div>
       <div class="col-md-5 col-md-offset-1 medium-articles">
+        <a class="m-story" data-collapsed="true" href="https://medium.com/writing-with-quill/quill-is-open-sourcing-nlp-tools-to-aid-student-writing-d091ce27e913">Quill is Open Sourcing NLP Tools To Aid Student Writing</a>
+        <a class="m-story" data-collapsed="true" href="https://medium.com/writing-with-quill/we-re-now-supporting-google-classroom-and-clever-55f2c12272f7">We’re Now Supporting Google Classroom and Clever </a>
+        <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/two-years-in-quill-org-reaches-100-000-students-milestone-78e81b3c715c">Two Years In, Quill.org Reaches 100,000 Students Milestone</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/introducing-quill-progress-reports-d340273ce799">Introducing Quill Progress Reports</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/quill-begins-learnlaunch-accelerator-d2a362bf0a1c">Quill Begins LearnLaunch Accelerator</a>
         <a class="m-story" data-collapsed="true" href="https://medium.com/@quill/play-testing-stories-with-friends-at-nyc-bigapps-1758cef008d9">Play-testing Stories With Friends at NYC BigApps</a>
