style activity category cms pages further

--- a/app/assets/stylesheets/pages/activity_categories.scss
+++ b/app/assets/stylesheets/pages/activity_categories.scss
@@ -33,8 +33,9 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      .delete {
+      .delete, .show {
         font-size: 14px;
+        cursor: pointer;
       }
     }
   }
