--- a/app/styles/components/classroom_lessons/_teacher_navbar.scss
+++ b/app/styles/components/classroom_lessons/_teacher_navbar.scss
@@ -55,9 +55,9 @@
 .help-dropdown, .flag-dropdown {
   position: absolute;
   background-color: white;
-  width: 141px;
+  width: 149px;
   padding: 6px;
-  font-size: 13px;
+  font-size: 14px;
   border-radius: 2px;
   box-shadow: 0 2px 3px 0 #e9e9e9;
   top: 45px;
@@ -73,17 +73,20 @@
 }
 
 .flag-dropdown {
-  &.one-row {
-    padding: 2px 6px;
-  }
-  width: 147px;
-  right: 168px;
+  width: 157px;
+  right: 162px;
   color: #3b3b3b;
   hr {
     margin: 9px 0;
   }
   .no-flagged-students {
-    color: #969696;
+    color: #818181;
+    border-bottom: solid 1px #e9e9e9;
+    font-weight: 600;
+  }
+  .explanation {
+    font-size: 11px;
+    color: #858585;
   }
 }
 
