more minor style updates

--- a/app/assets/stylesheets/pages/cms_unit_templates.scss
+++ b/app/assets/stylesheets/pages/cms_unit_templates.scss
@@ -1,4 +1,7 @@
 .cms-unit-templates {
+  .save-button {
+    margin-left: 10px;
+  }
   .sortable-table {
     width: 100%;
     border: #cecece 1px solid;
