--- a/app/assets/stylesheets/pages/scorebook_page.scss
+++ b/app/assets/stylesheets/pages/scorebook_page.scss
@@ -8,6 +8,10 @@
 		margin-left: 15px;
 	}
 
+	.student-name {
+		margin-bottom: 1em;
+	}
+
 	.date-range-filter {
 		padding-left: 15px;
 		.datepicker-container {
