update copy on projecor modal

--- a/app/styles/components/classroom_lessons/_projector_modal.scss
+++ b/app/styles/components/classroom_lessons/_projector_modal.scss
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding: 55px;
+    padding: 55px 45px;
     .exit {
       right: 12px;
       top: 12px;
