--- a/app/styles/components/classroom_lessons/_teacher_navbar.scss
+++ b/app/styles/components/classroom_lessons/_teacher_navbar.scss
@@ -93,12 +93,11 @@
 .help-dropdown {
   font-weight: 600;
   right: 6px;
-  color: #00c2a2;
+  a {
+    color: #027360;
+  }
   p:hover {
     background-color: #f5f5f5;
-  }
-  a:hover {
-    color: #00c2a2;
   }
 }
 
