--- a/app/styles/components/classroom_lessons/_flagged_student_list.scss
+++ b/app/styles/components/classroom_lessons/_flagged_student_list.scss
@@ -3,6 +3,12 @@
   border: solid 1px #e9e9e9;
   margin-top: 30px;
   // max-width: 820px;
+  .assignment-options-header {
+    h2 {
+      font-weight: 600;
+      font-size: 18px;
+    }
+  }
   .list-summary, .assignment-options-header {
     height: 60px;
     background-color: #fafafa;
