Modify CMS ActivityClassifications to follow same patterns as other React-based CMS pages based on Marcellos old format but with updated syntax 💪

--- a/app/assets/stylesheets/cms/cms.scss
+++ b/app/assets/stylesheets/cms/cms.scss
@@ -45,8 +45,9 @@ article.cms {
   float:left;
   clear:both;
   }
-  label {
-    margin-top: 30px;
+  label, .form-label {
+    font-weight: 700;
+    margin: 30px auto 5px auto;
   }
   input[type='submit'] {
     margin-top: 30px;
