--- a/app/views/cms/activity_classifications/index.html.slim
+++ b/app/views/cms/activity_classifications/index.html.slim
@@ -1,15 +1,2 @@
-.container
-  article.simple-rounded-box.activity-classifications-page
-    table.table
-      thead
-        th.name-column Name
-        th
-
-      - @activity_classifications.each do |activity_classification|
-        tr
-          td= activity_classification.name
-          td
-            span>= link_to 'Edit', edit_cms_activity_classification_path(activity_classification)
-            span>= link_to 'Activities', url_for(controller: 'cms/activities', activity_classification_id: activity_classification.id, action: 'index')
-
-    = link_to 'Add a new type of activity', new_cms_activity_classification_path
+.container.cms-container#cms-unit-templates
+  = react_component('ActivityClassificationsApp')
