set up initial rails routing for teacher fixes pages

--- a/app/views/profiles/staff.html.slim
+++ b/app/views/profiles/staff.html.slim
@@ -32,3 +32,7 @@
       tr: td= link_to "External: Daily Usage", "https://quill.geckoboard.com/edit/dashboards/138770"
       tr: td= link_to "Internal: Tracking", "https://quill.geckoboard.com/edit/dashboards/170032"
       tr: td= link_to "Memory/Response Time Stats", "https://log2viz.herokuapp.com/app/empirical-grammar"
+
+    article.simple-rounded-box: table.table
+      thead: th Teacher Fixes
+      tr: td= link_to "Index", 'teacher_fixes'
