add lessons to homepage

--- a/app/views/pages/home_new.html.erb
+++ b/app/views/pages/home_new.html.erb
@@ -41,12 +41,33 @@
   </div>
 </section>
 
-<section class='tool-section bg-tool-red'>
-  <div class="tool diagnostic-tool">
+<section class='tool-section bg-tool-fuchsia'>
+  <div class="tool lessons-tool">
     <div class='video-section'>
-      <video src="https://assets.quill.org/videos/tools/diagnostic.mp4" autoplay loop playsinline muted/>
+      <video src="https://assets.quill.org/videos/tools/lessons.mp4" autoplay loop playsinline muted/>
+        <p>
+          Video not supported
+        </p>
+      </video>
     </div>
     <div class='info-section right'>
+      <a href="/tools/lessons/"><h2 class='q-h2'><img class="icon-white" src='https://assets.quill.org/images/shared/icon_lessons_white.svg'>Quill Lessons <img src="https://assets.quill.org/images/icons/NewIconLesson.svg"/></h2></a>
+      <p class='blurb'>Quill Lessons enables teachers to lead whole-class and small group writing instruction.</p>
+      <div class="light-bar"></div>
+      <p class='summary'>
+        Teachers control interactive slides that contain writing prompts, and the entire class responds to each prompt. Each Quill Lessons activity provides a lesson plan, writing prompts, discussion topics, and a follow up independent practice activity.
+      </p>
+      <div>
+        <a href="https://quillconnect.firebaseapp.com/#/teach/class-lessons/-KsKpXAoaEIY5jvWMIzJ/preview" target="_blank" class="q-button icon-button bg-white text-lessonspurple">Try A Sample Activity</a>
+        <a href="/tools/lessons/" target="_blank" class="q-button text-white learn-more-button">Learn More</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class='tool-section bg-tool-red'>
+  <div class="tool diagnostic-tool">
+    <div class='info-section'>
       <a href="/tools/diagnostic/"><h2 class='q-h2'><img class="icon-white" src='https://assets.quill.org/images/shared/quill_diagnostic_white.svg'>Quill Diagnostic</h2></a>
       <p class='blurb'>
         Quickly determine which skills your students need to work on with our 22 question diagnostic.
@@ -75,6 +96,9 @@
         </div>
       </div>
     </div>
+    <div class='video-section'>
+      <video src="https://assets.quill.org/videos/tools/diagnostic.mp4" autoplay loop playsinline muted/>
+    </div>
 
   </div>
 
@@ -82,7 +106,10 @@
 
 <section class='tool-section bg-tool-blue'>
   <div class="tool proofreader-tool">
-    <div class='info-section'>
+    <div class='video-section'>
+      <video src="https://assets.quill.org/videos/tools/proofreader.mp4" autoplay loop playsinline muted/>
+    </div>
+    <div class='info-section right'>
       <a href="/tools/proofreader/"><h2 class='q-h2'><img class="icon-white" src='https://assets.quill.org/images/shared/quill_proofreader_white.svg'>Quill Proofreader</h2></a>
       <p class='blurb'>Proofreader teaches your students editing skills by having them proofread passages.</p>
       <div class="light-bar"></div>
@@ -94,9 +121,6 @@
         <a href="/tools/proofreader/" target="_blank" class="q-button text-white learn-more-button">Learn More</a>
       </div>
     </div>
-    <div class='video-section'>
-      <video src="https://assets.quill.org/videos/tools/proofreader.mp4" autoplay loop playsinline muted/>
-    </div>
 
   </div>
 
@@ -104,10 +128,7 @@
 
 <section class='tool-section bg-tool-purple'>
   <div class="tool grammar-tool">
-    <div class='video-section'>
-      <video src="https://assets.quill.org/videos/tools/grammar.mp4" autoplay loop playsinline muted/>
-    </div>
-    <div class='info-section right'>
+    <div class='info-section'>
       <a href="/tools/grammar/"><h2 class='q-h2'><img class="icon-white" src='https://assets.quill.org/images/shared/quill_grammar_white.svg'>Quill Grammar</h2></a>
       <p class='blurb'>Students practice basic grammar skills, from comma placement to parallel structure.</p>
       <div class="light-bar"></div>
@@ -118,6 +139,9 @@ Quill Grammar has over 150 sentence writing activities to help your students. Ou
         <a href="/activity_sessions/anonymous?activity_id=110" target="_blank" class="q-button icon-button bg-white text-purple">Try A Sample Activity</a>
         <a href="/tools/grammar/" target="_blank" class="q-button text-white learn-more-button">Learn More</a>
       </div>
+    </div>
+    <div class='video-section'>
+      <video src="https://assets.quill.org/videos/tools/grammar.mp4" autoplay loop playsinline muted/>
     </div>
   </div>
 </section>
