change color from fuchsia to magenta

--- a/app/views/pages/home_new.html.erb
+++ b/app/views/pages/home_new.html.erb
@@ -41,7 +41,7 @@
   </div>
 </section>
 
-<section class='tool-section bg-tool-fuchsia'>
+<section class='tool-section bg-tool-magenta'>
   <div class="tool lessons-tool">
     <div class='video-section'>
       <video src="https://assets.quill.org/videos/tools/lessons.mp4" autoplay loop playsinline muted/>
