--- a/client/app/assets/styles/tool-section.scss
+++ b/client/app/assets/styles/tool-section.scss
@@ -107,7 +107,7 @@ $tool-grey: #f8f9f9;
 
   .lessons-tool {
     .video-section {
-      background-image: url('http://assets.quill.org/images/tools/lessons/lessons_tool_pattern.svg')
+      background-image: url('http://assets.quill.org/images/homepage/lessonspatternhomepage.png')
     }
   }
 
@@ -719,7 +719,7 @@ $tool-grey: #f8f9f9;
     background-color: #9C2ADE;
 }
 
-.bg-tool-fuchsia {
+.bg-tool-magenta {
   background-color: #bd0d7e;
 }
 
