get all routing set up for teacher fix

--- a/app/views/profiles/staff.html.slim
+++ b/app/views/profiles/staff.html.slim
@@ -35,4 +35,4 @@
 
     article.simple-rounded-box: table.table
       thead: th Teacher Fixes
-      tr: td= link_to "Index", 'teacher_fixes'
+      tr: td= link_to "Index", 'teacher_fix'
