--- a/app/views/pages/shared/_premium_main.html.slim
+++ b/app/views/pages/shared/_premium_main.html.slim
@@ -70,5 +70,8 @@
         .preview-question
           | Have more questions?
         .preview-answer
-          | You can call us at 646-442-1095 or visit our
+          | You can call us at 646-442-1095 or visit our 
           = link_to 'Support Center.', 'http://support.quill.org', target: '_new'
+
+  .preview-questions-view-all
+    = link_to 'View All Questions and Answers', 'https://support.quill.org/quill-premium', target: '_new'
