--- a/app/views/pages/shared/_premium_subtabs.html.erb
+++ b/app/views/pages/shared/_premium_subtabs.html.erb
@@ -3,7 +3,7 @@
     <ul>
       <li><a href='#first-preview-section'>Pricing</a></li>
       <li><a href='#second-preview-section'>Example</a></li>
-      <li><a href='#fourth-preview-section'>Question</a></li>
+      <li><a href='#fourth-preview-section'>Questions</a></li>
     </ul>
   </div>
 
