--- a/app/views/profiles/staff.html.slim
+++ b/app/views/profiles/staff.html.slim
@@ -8,8 +8,12 @@
       tr: td= link_to 'Admins Editor (Create Root Admin)', cms_admins_path
 
     article.simple-rounded-box: table.table
-      thead: th Project Kanban Board
-      tr: td= link_to 'Admin Dashboard Project', 'https://waffle.io/empirical-org/empirical-core?milestone=Admin%20Dashboard'
+      thead: th Teacher Fixes
+      tr: td= link_to "Index", 'teacher_fix'
+
+    article.simple-rounded-box: table.table
+      thead: th Project Board
+      tr: td= link_to 'Github Project Baord', 'https://github.com/orgs/empirical-org/projects/1'
 
     article.simple-rounded-box: table.table
       thead: th Activity Management System
@@ -32,7 +36,3 @@
       tr: td= link_to "External: Daily Usage", "https://quill.geckoboard.com/edit/dashboards/138770"
       tr: td= link_to "Internal: Tracking", "https://quill.geckoboard.com/edit/dashboards/170032"
       tr: td= link_to "Memory/Response Time Stats", "https://log2viz.herokuapp.com/app/empirical-grammar"
-
-    article.simple-rounded-box: table.table
-      thead: th Teacher Fixes
-      tr: td= link_to "Index", 'teacher_fix'
