--- a/app/views/teachers/admin/_subnav.html.erb
+++ b/app/views/teachers/admin/_subnav.html.erb
@@ -3,6 +3,9 @@
   <div class="container">
 
     <ul>
+      <li><a href="/teachers/admin_dashboard#features">Features</a></li>
+      <li><a href="/teachers/admin_dashboard#teacher_account_access">Teacher Account Access</a></li>
+      <li><a href="/teachers/admin_dashboard#create_new_account">Create New Accounts</a></li>
     </ul>
 
   </div>
