--- a/app/views/teachers/shared/_scorebook_tabs.html.erb
+++ b/app/views/teachers/shared/_scorebook_tabs.html.erb
@@ -26,8 +26,8 @@
 
       <%- if current_user.admin? %>
         <li class="<%= (action_name == 'admin_dashboard') ? 'admin-tab active' : 'admin-tab' %>">
-          <%= link_to raw('Admin Dashboard'), teachers_admin_dashboard_path, role: 'tab' %>
-          <%= link_to 'Admin', teachers_admin_dashboard_path, role: 'tab', class: 'mobile'  %>
+          <%= link_to raw('School Dashboard'), teachers_admin_dashboard_path, role: 'tab' %>
+          <%= link_to 'School', teachers_admin_dashboard_path, role: 'tab', class: 'mobile'  %>
         </li>
       <% end %>
       <%- unless ((current_user.premium_state == 'paid') || (current_user.premium_state == 'school')) %>
