--- a/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
@@ -1,5 +1,10 @@
 #admin-dashboard {
 
+  h2 {
+    font-size: 24px;
+    font-weight: 600;
+  }
+
   .blur {
     tr {
       td:nth-of-type(2),td:nth-of-type(3),td:nth-of-type(4), {
@@ -31,8 +36,6 @@
     color: #3b3b3b;
     margin-top: 22px;
     h2 {
-      font-size: 24px;
-      font-weight: 600;
       margin-bottom: 10px;
     }
     .features-list {
@@ -107,6 +110,132 @@
             justify-content: center;
           }
         }
+      }
+    }
+  }
+  #teacher_account_access {
+    padding-top: 55px;
+    h2 {
+      margin-bottom: 15px;
+    }
+    .warning {
+      font-weight: bold;
+    }
+    .teacher-link {
+      font-size: 14px;
+      font-weight: 600;
+    }
+  }
+
+  #create_new_accounts {
+    padding-top:70px;
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 15px;
+      .text-black {
+        border-radius: 6px;
+        border: solid 1px black;
+      }
+    }
+    p {
+      font-size: 16px;
+      line-height: 1.62;
+      max-width: 850px;
+      span {
+        font-weight: bold;
+      }
+    }
+    .form-and-schools-list {
+      display: flex;
+      margin-top: 50px;
+      .form {
+        max-width: 586px;
+        width: 100%;
+        border-right: 1px solid #c0c0c0;
+        padding-right: 55px;
+        input {
+          margin-right: 0px;
+        }
+        .first-line, .second-line {
+          margin-bottom: 20px;
+        }
+        .first-line {
+          display: flex;
+          justify-content: space-between;
+        }
+        .second-line {
+          position: relative;
+          max-width: 521px;
+          width: 100%;
+          &:focus {
+            outline: none;
+          }
+          button {
+            &.select-gray {
+              background: white;
+              color: #757575;
+            }
+            &:focus {
+              outline: none;
+            }
+          }
+          .dropdown-menu {
+            margin: 0px;
+            cursor: pointer;
+            width: 100%;
+            border-radius: 5px;
+            li {
+              height: 25px;
+              color: #757575;
+              display: flex;
+              align-items: center;
+              padding-left: 14px;
+            }
+          }
+        }
+        .first-name, .last-name {
+          width: 150px;
+        }
+        .email {
+          max-width: 200px;
+          width: 100%;
+        }
+      }
+      .schools {
+        margin-left: 25px;
+        max-width: 350px;
+        width: 100%;
+        .schools-list {
+          background-color: white;
+          padding: 0 20px;
+          margin: 15px 0px;
+          max-width: 350px;
+          width: 100%;
+          .school {
+            font-size: 14px;
+            height: 45px;
+            display: flex;
+            align-items: center;
+            border-bottom: solid 1px #e9e9e9;
+            &:last-of-type {
+              border-bottom: none;
+            }
+            img {
+              height: 20px;
+              margin-right: 15px;
+            }
+          }
+        }
+      .need-access {
+        font-size: 14px;
+        font-style: italic;
+        color: #969696;
+        a {
+          text-decoration: underline;
+        }
+      }
       }
     }
   }
