add q and a section to admin dashboard

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -191,7 +191,7 @@
         </h4>
     </section>
 
-    <%= react_component('LessonsQuestionsAndAnswersApp', props: {})%>
+    <%= react_component('LessonsQuestionsAndAnswersApp', props: {questionsAndAnswersFile: 'lessons'})%>
 
     <!-- Only show if user is not logged in  -->
       <% if !current_user %>
