--- a/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
+++ b/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
@@ -142,7 +142,7 @@
 
   #create_new_accounts {
     padding-top:70px;
-    margin-bottom: 15px;
+    margin-bottom: 150px;
     .header {
       display: flex;
       justify-content: space-between;
@@ -268,6 +268,23 @@
           text-decoration: underline;
         }
       }
+      }
+    }
+  }
+
+  #q-and-a {
+    position: relative;
+    width: 100vw;
+    left: calc(-50vw + 50%);
+    h1 {
+      margin-bottom: 50px;
+    }
+    .qa-section {
+      padding: 15px 0px;
+      .answer {
+        p, ol, ul {
+          margin-top: 15px;
+        }
       }
     }
   }
