add link to supporting info on lessons page if present on activity

--- a/app/views/cms/activities/_form.html.slim
+++ b/app/views/cms/activities/_form.html.slim
@@ -15,5 +15,7 @@
       = f.select :flag, Activity::FLAGS
       = f.label :topic_category
       = f.collection_select :topic_id, Topic.all, :id, :name
+      = f.label :supporting_info
+      = f.text_field :supporting_info
 
     = f.submit :save
