update copy for emails

--- a/app/views/user_mailer/join_school_email.html.erb
+++ b/app/views/user_mailer/join_school_email.html.erb
@@ -6,9 +6,9 @@
 
 <a href=<%= "#{ENV['DEFAULT_URL']}/teachers/#{@user.id}/schools/#{@school.id}" %>>Link My Account To My School</a>
 
-<p>With Quill Premium access, you can get access to concepts and standards reports and you can download and print your student reports. You will also receive priority support so if you us at support@quill.org.</p>
+<p>With Quill Premium access, you can get access to concepts and standards reports and you can download and print your student reports. You will also receive priority support so if you contact us at support@quill.org.</p>
 
-<p>Your school will also Quill professional development. For more information about the session, reach out to your Quill school administrator. We’re excited that you have joined our community of learners, and welcome your questions and feedback!
+<p>Your school will also receive Quill professional development. For more information about the session, reach out to your Quill school administrator. We’re excited that you have joined our community of learners, and welcome your questions and feedback!
 
 <p>Enjoy,</p>
 <p>Becca Garrison</p>
