Nil check the description attr here

--- a/app/views/pages/activities.html.slim
+++ b/app/views/pages/activities.html.slim
@@ -36,4 +36,4 @@
           .row.activity-description
             .col-xs-12
               i
-                = activity.description.html_safe
+                = activity.description&.html_safe
