--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -11,7 +11,7 @@
             <% people.each do |person| %>
               <% if person %>
                 <div class="col-md-4 col-xs-12 team_section">
-                  <%= image_tag person[:img] %>
+                  <img src=<%= "http://assets.quill.org/images/headshots/#{person[:img]}" %> %>
                   <h4> <%= person[:name] %> </h4>
                   <p> <%= person[:title] %> </p>
                   <p> <%= person[:desc] %> </p>
