--- a/app/styles/components/classroom_lessons/_tooltip.scss
+++ b/app/styles/components/classroom_lessons/_tooltip.scss
@@ -22,6 +22,9 @@
   &.projector {
     right: 124px;
   }
+  &.pdf {
+    right: 203px;
+  }
   .text {
     color: black;
   }
@@ -29,5 +32,6 @@
     position: relative;
     bottom: 39px;
     left: 63px;
+    color: white;
   }
 }
