add congratulations modal (missing pic, close function)

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -17,6 +17,7 @@
 @import 'classroom_lessons/_preview_modal.scss';
 @import 'classroom_lessons/_assigned_section.scss';
 @import 'classroom_lessons/_flagged_student_completed.scss';
+@import 'classroom_lessons/_congratulations_modal.scss';
 
 .teach-lesson-container {
   display: flex;
