rewrite fake-table to use flex box instead of bootstrap

--- a/app/assets/stylesheets/shared/fake-table.scss
+++ b/app/assets/stylesheets/shared/fake-table.scss
@@ -12,12 +12,22 @@
   }
   .header {
     background-color: #e6e6e6;
-    padding: 12px 12px;
+    padding: 12px 24px;
     color: #000;
     font-weight: bold;
+    display: flex;
+    .header-text {
+      flex: 3;
+    }
+    .header-list {
+      flex: 1;
+    }
   }
   .line {
-    padding: 10px 12px;
+    padding: 0px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     border-bottom: 1px solid #cecece;
     &:last-child {
       border-bottom: 0;
@@ -30,9 +40,15 @@
     float: right;
     line-height: 40px;
   }
+  .row-list-beginning {
+    flex: 3;
+    display: flex;
+    align-items: center;
+  }
   .row-list-end {
     width: 215px;
     display: flex;
+    flex: 1;
     justify-content: space-between;
     float: right;
     padding-right: 12px;
