update quill lessons page

--- a/app/views/pages/lessons_tool.erb
+++ b/app/views/pages/lessons_tool.erb
@@ -25,7 +25,7 @@
     <section class="walk-thru-wrapper desktop" id="how-it-works">
         <div class="walk-thru-step flex-row vertically-centered">
             <div class="content-wrapper flex-row space-between vertically-centered">
-                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_1.svg" %> alt="lessons image">
+                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_1.png" %> alt="lessons image" style="height:302px">
                 <div class="blurb">
                     <h2>Class-Wide Interactive Activities</h2>
                     <p>
@@ -36,7 +36,7 @@
         </div>
         <div class="walk-thru-step flex-row vertically-centered">
             <div class="content-wrapper flex-row space-between vertically-centered">
-                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_2.svg" %> alt="lessons image">
+                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_2.png" %> alt="lessons image" style="height:266px">
                 <div class="blurb">
                     <h2>Lead The Lesson</h2>
                     <p>
@@ -47,7 +47,7 @@
         </div>
         <div class="walk-thru-step flex-row vertically-centered">
             <div class="content-wrapper flex-row space-between vertically-centered">
-                <img class='negative-left-margin' src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_3.svg" %> alt="lessons image">
+                <img class='negative-left-margin' src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_3.png" %> alt="lessons image" style="height:310px">
                 <div class="blurb">
                     <h2>Discuss Student Answers</h2>
                     <p>
@@ -58,7 +58,7 @@
         </div>
         <div class="walk-thru-step flex-row vertically-centered">
             <div class="content-wrapper flex-row space-between vertically-centered">
-                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_4.svg" %> alt="lessons image">
+                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_4.png" %> alt="lessons image" style="height:207px">
                 <div class="blurb">
                     <h2>Identify Students For Small Group</h2>
                     <p>
@@ -71,7 +71,7 @@
     <section class="walk-thru-wrapper mobile" id="how-it-works-mobile">
         <div class="walk-thru-step">
             <div class="content-wrapper">
-                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_1.svg" %> alt="lessons image">
+                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_1.png" %> alt="lessons image" style="height:302px">
                 <div class="blurb">
                   <h2>Class-Wide Interactive Activities</h2>
                   <p>
@@ -82,7 +82,7 @@
         </div>
         <div class="walk-thru-step">
             <div class="content-wrapper">
-                <img id='shrink-me' src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_2.svg" %> alt="lessons image">
+                <img id='shrink-me' src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_2.png" %> alt="lessons image" style="height:266px">
                 <div class="blurb">
                   <h2>Lead The Lesson</h2>
                   <p>
@@ -93,7 +93,7 @@
         </div>
         <div class="walk-thru-step">
             <div class="content-wrapper">
-                <img id='shrink-me' src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_3.svg" %> alt="lessons image">
+                <img id='shrink-me' src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_3.png" %> alt="lessons image" style="height:310px">
                 <div class="blurb">
                   <h2>Discuss Student Answers</h2>
                   <p>
@@ -104,7 +104,7 @@
         </div>
         <div class="walk-thru-step">
             <div class="content-wrapper">
-                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_4.svg" %> alt="lessons image">
+                <img src=<%= "#{ENV['CDN_URL']}/images/tools/lessons/lessons_intro_slide_4.png" %> alt="lessons image" style="height:207px">
                 <div class="blurb">
                   <h2>Identify Students For Small Group</h2>
                   <p>
@@ -183,11 +183,12 @@
     </section>
 
     <section class="tool-testimonial" id="testimonial">
+        <img src="https://assets.quill.org/images/tools/lessons/Lessons_Testimonial_Image.png" style="height:430px;margin-bottom:40px"></img>
         <p class='quote'>
-            “Thanks again for this tool. The length of lessons, the quality of writing, and the immediate feedback make this one of the best tools (and by far the best free tool) I’ve ever had for teaching and practicing grammar with my students.”
+          "The kids LOVED seeing their responses come up live as we went through the lesson. Eighth-grade students were literally begging me to project their answers or asking me to allow them to resubmit an answer because they'd just gotten a better idea from another students example. An excited class learning grammar from each other, now that's a good day in ELA class! I can't wait till Friday to do it again."
         </p>
         <h4 class="q-h4 author">
-            <span>Sean Martin,</span> City Neighbors High School
+            <span>Kim Hinderlie,</span> Elma Elementary School
         </h4>
     </section>
 
